--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,11 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="col-md-6 mx-auto mt-5">
+  <h1>welcome to <strong>Meshiterro</strong>!!</h1>
+  <p>In <strong>Meshiterro</strong>,</p>
+  <p>SNS community that indiscriminately stimulates the appetite of sensible citizens.</p>
+  <div class="row">
+    <div class="ml-3">
+      <%= link_to 'Log in', new_user_session_path, class: "btn btn-info" %>
+      <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-success" %>
+    </div>
+  </div>
+</div>
